# TP1_CPP_MatteoD

./: .gitignore  CMakeLists.txt  README.md  code_review_tarek_talsi.md  csvReader.c  csvReader.cpp  csvReader.hpp  fsm.cpp  fsm.h  main  main.cpp  pokedex.hpp  pokemon.cpp  pokemon.hpp  pokexdex.cpp  setOfPokemon.cpp  setOfPokemon.hpp  trainer.cpp  trainer.h
old/: main.cpp
